# Client-Tracker

./: .gitignore  Project.md  README.md  pyproject.toml  run.py  start.ps1
app/: __init__.py  db.py  telegram_connectivity.py
app/routes/: billing.py  calendar.py  clients.py  profiles.py  telegram.py
app/static/: style.css
app/templates/: base.html
app/templates/billing/: index.html
app/templates/calendar/: day.html  month.html  telegram_sync.html
app/templates/clients/: _autocomplete.html  index.html
app/templates/profiles/: index.html
app/templates/telegram/: _panel.html  index.html
tests/: conftest.py  test_billing.py  test_calendar.py  test_clients.py  test_profiles.py  test_telegram.py
