[project]
name = "clinic-clients"
version = "0.1.0"
description = "Local web tool to track clinic clients and monthly billing."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
